<resources>
    <string name="app_name">DB_MDudash</string>
    <string name="system">University Dormitory System</string>
    <string name="sign">Sign in</string>
    <string name="dormList">Dormitories</string>
    <string name="plus">+</string>
    <string name="conf">Configure dormitory info</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="rooms">Rooms</string>
    <string name="confR">Configure room info</string>
</resources>